# mini-bitcoin-script

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
examples/: inspect.rs  p2pkh.rs
plans/: 00-overview.md  01-architecture.md  02-dependencies.md  03-error-model.md  04-opcode-model.md  05-token-model.md  06-tokenizer.md  07-stack.md  08-hash-functions.md  09-hex-utility.md  10-engine.md  11-p2pkh-validation.md  12-public-api.md  13-test-plan.md  14-examples.md  15-implementation-order.md  checklist.md
src/: engine.rs  error.rs  hash.rs  hex.rs  lib.rs  opcode.rs  script.rs  stack.rs  token.rs  tokenizer.rs
tests/: conditionals_tests.rs  engine_tests.rs  p2pkh_tests.rs  tokenizer_tests.rs
